Fix alignment issues

--- a/client/src/components/CarSlider/CarSlider.scss
+++ b/client/src/components/CarSlider/CarSlider.scss
@@ -2,7 +2,6 @@
 @import '../../styles/Mixins';
 
 .carousel {
-  // position: relative;
   height: 100vh;
   width: 100vw;
 }
@@ -13,7 +12,7 @@
     left: -50%;
     width: 150% !important;
     margin-top: -45rem;
-    margin-bottom: 15rem;
+    margin-bottom: 45rem;
     margin-right: 0rem;
   }
 
@@ -21,12 +20,13 @@
     position: relative;
     margin-top: -40rem;
     width: 150% !important;
-    margin-bottom: 25rem;
+    margin-bottom: 45rem;
     margin-right: 0rem;
   }
 
   @include respond(phone) {
-    margin-bottom: 40rem;
+    position: relative;
+    margin-bottom: 45rem;
   }
 }
 
@@ -82,7 +82,7 @@
   }
 
   @include respond(phone) {
-    bottom: -5%;
+    bottom: 0%;
   }
 
   h1 {
